--- a/deploy/cluster_role_binding.yaml
+++ b/deploy/cluster_role_binding.yaml
@@ -1,4 +1,4 @@
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: managed-velero-operator
@@ -8,6 +8,6 @@ subjects:
   name: managed-velero-operator
   namespace: openshift-velero
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: managed-velero-operator
   apiGroup: rbac.authorization.k8s.io
