--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: managed-velero-operator
+  namespace: openshift-velero
 spec:
   replicas: 1
   selector:
@@ -21,10 +22,6 @@ spec:
           - managed-velero-operator
           imagePullPolicy: Always
           env:
-            - name: WATCH_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
             - name: POD_NAME
               valueFrom:
                 fieldRef:
