--- a/deploy/velero_cluster_role_binding.yaml
+++ b/deploy/velero_cluster_role_binding.yaml
@@ -1,13 +1,12 @@
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: managed-velero-operator
-  namespace: openshift-velero
+  name: velero
 subjects:
 - kind: ServiceAccount
-  name: managed-velero-operator
+  name: velero
   namespace: openshift-velero
 roleRef:
-  kind: Role
-  name: managed-velero-operator
+  kind: ClusterRole
+  name: cluster-admin
   apiGroup: rbac.authorization.k8s.io
